parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> INICIO statement_list FIM
Rule 2     type_specifier -> TIPO_INT
Rule 3     type_specifier -> TIPO_FLOAT
Rule 4     type_specifier -> TIPO_CHAR
Rule 5     statement_list -> statement
Rule 6     statement_list -> statement_list statement
Rule 7     statement -> assignment
Rule 8     statement -> input
Rule 9     statement -> output
Rule 10    statement -> if_statement
Rule 11    statement -> while_statement
Rule 12    statement -> for_statement
Rule 13    statement -> declaration
Rule 14    assignment -> VARIAVEL ATRIBUICAO expression PONTO_VIRGULA
Rule 15    input -> ENTRADA ABRE_PARENTESES VARIAVEL FECHA_PARENTESES PONTO_VIRGULA
Rule 16    output -> SAIDA ABRE_PARENTESES output_list FECHA_PARENTESES PONTO_VIRGULA
Rule 17    output_list -> expression
Rule 18    output_list -> output_list VIRGULA expression
Rule 19    expression -> term
Rule 20    expression -> expression SOMA term
Rule 21    expression -> expression SUBTRACAO term
Rule 22    expression -> expression MENOR term
Rule 23    expression -> expression MAIOR term
Rule 24    expression -> expression IGUAL term
Rule 25    expression -> expression DIFERENTE term
Rule 26    expression -> expression MENOR_IGUAL term
Rule 27    expression -> expression MAIOR_IGUAL term
Rule 28    expression -> expression E term
Rule 29    expression -> expression OU term
Rule 30    term -> factor
Rule 31    term -> term MULTIPLICACAO factor
Rule 32    term -> term DIVISAO factor
Rule 33    factor -> INT
Rule 34    factor -> FLOAT
Rule 35    factor -> CHAR
Rule 36    factor -> VARIAVEL
Rule 37    factor -> ABRE_PARENTESES expression FECHA_PARENTESES
Rule 38    factor -> NEGACAO factor
Rule 39    factor -> factor RESTO factor
Rule 40    if_statement -> COND_IF ABRE_PARENTESES expression FECHA_PARENTESES INICIO statement_list FIM
Rule 41    if_statement -> COND_IF ABRE_PARENTESES expression FECHA_PARENTESES INICIO statement_list FIM COND_ELSE INICIO statement_list FIM
Rule 42    while_statement -> REP_DURING ABRE_PARENTESES expression FECHA_PARENTESES INICIO statement_list FIM
Rule 43    for_statement -> REP_THROUGH ABRE_PARENTESES VARIAVEL PONTO_VIRGULA expression PONTO_VIRGULA expression FECHA_PARENTESES INICIO statement_list FIM
Rule 44    declaration -> type_specifier VARIAVEL PONTO_VIRGULA

Terminals, with rules where they appear

ABRE_PARENTESES      : 15 16 37 40 41 42 43
ATRIBUICAO           : 14
CHAR                 : 35
COND_ELSE            : 41
COND_IF              : 40 41
DIFERENTE            : 25
DIVISAO              : 32
E                    : 28
ENTRADA              : 15
FECHA_PARENTESES     : 15 16 37 40 41 42 43
FIM                  : 1 40 41 41 42 43
FLOAT                : 34
IGUAL                : 24
INICIO               : 1 40 41 41 42 43
INT                  : 33
MAIOR                : 23
MAIOR_IGUAL          : 27
MENOR                : 22
MENOR_IGUAL          : 26
MULTIPLICACAO        : 31
NEGACAO              : 38
OU                   : 29
PONTO_VIRGULA        : 14 15 16 43 43 44
REP_DURING           : 42
REP_THROUGH          : 43
RESTO                : 39
SAIDA                : 16
SOMA                 : 20
SUBTRACAO            : 21
TIPO_CHAR            : 4
TIPO_FLOAT           : 3
TIPO_INT             : 2
VARIAVEL             : 14 15 36 43 44
VIRGULA              : 18
error                : 

Nonterminals, with rules where they appear

assignment           : 7
declaration          : 13
expression           : 14 17 18 20 21 22 23 24 25 26 27 28 29 37 40 41 42 43 43
factor               : 30 31 32 38 39 39
for_statement        : 12
if_statement         : 10
input                : 8
output               : 9
output_list          : 16 18
program              : 0
statement            : 5 6
statement_list       : 1 6 40 41 41 42 43
term                 : 19 20 21 22 23 24 25 26 27 28 29 31 32
type_specifier       : 44
while_statement      : 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . INICIO statement_list FIM

    INICIO          shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> INICIO . statement_list FIM
    (5) statement_list -> . statement
    (6) statement_list -> . statement_list statement
    (7) statement -> . assignment
    (8) statement -> . input
    (9) statement -> . output
    (10) statement -> . if_statement
    (11) statement -> . while_statement
    (12) statement -> . for_statement
    (13) statement -> . declaration
    (14) assignment -> . VARIAVEL ATRIBUICAO expression PONTO_VIRGULA
    (15) input -> . ENTRADA ABRE_PARENTESES VARIAVEL FECHA_PARENTESES PONTO_VIRGULA
    (16) output -> . SAIDA ABRE_PARENTESES output_list FECHA_PARENTESES PONTO_VIRGULA
    (40) if_statement -> . COND_IF ABRE_PARENTESES expression FECHA_PARENTESES INICIO statement_list FIM
    (41) if_statement -> . COND_IF ABRE_PARENTESES expression FECHA_PARENTESES INICIO statement_list FIM COND_ELSE INICIO statement_list FIM
    (42) while_statement -> . REP_DURING ABRE_PARENTESES expression FECHA_PARENTESES INICIO statement_list FIM
    (43) for_statement -> . REP_THROUGH ABRE_PARENTESES VARIAVEL PONTO_VIRGULA expression PONTO_VIRGULA expression FECHA_PARENTESES INICIO statement_list FIM
    (44) declaration -> . type_specifier VARIAVEL PONTO_VIRGULA
    (2) type_specifier -> . TIPO_INT
    (3) type_specifier -> . TIPO_FLOAT
    (4) type_specifier -> . TIPO_CHAR

    VARIAVEL        shift and go to state 12
    ENTRADA         shift and go to state 13
    SAIDA           shift and go to state 14
    COND_IF         shift and go to state 15
    REP_DURING      shift and go to state 16
    REP_THROUGH     shift and go to state 17
    TIPO_INT        shift and go to state 19
    TIPO_FLOAT      shift and go to state 20
    TIPO_CHAR       shift and go to state 21

    statement_list                 shift and go to state 3
    statement                      shift and go to state 4
    assignment                     shift and go to state 5
    input                          shift and go to state 6
    output                         shift and go to state 7
    if_statement                   shift and go to state 8
    while_statement                shift and go to state 9
    for_statement                  shift and go to state 10
    declaration                    shift and go to state 11
    type_specifier                 shift and go to state 18

state 3

    (1) program -> INICIO statement_list . FIM
    (6) statement_list -> statement_list . statement
    (7) statement -> . assignment
    (8) statement -> . input
    (9) statement -> . output
    (10) statement -> . if_statement
    (11) statement -> . while_statement
    (12) statement -> . for_statement
    (13) statement -> . declaration
    (14) assignment -> . VARIAVEL ATRIBUICAO expression PONTO_VIRGULA
    (15) input -> . ENTRADA ABRE_PARENTESES VARIAVEL FECHA_PARENTESES PONTO_VIRGULA
    (16) output -> . SAIDA ABRE_PARENTESES output_list FECHA_PARENTESES PONTO_VIRGULA
    (40) if_statement -> . COND_IF ABRE_PARENTESES expression FECHA_PARENTESES INICIO statement_list FIM
    (41) if_statement -> . COND_IF ABRE_PARENTESES expression FECHA_PARENTESES INICIO statement_list FIM COND_ELSE INICIO statement_list FIM
    (42) while_statement -> . REP_DURING ABRE_PARENTESES expression FECHA_PARENTESES INICIO statement_list FIM
    (43) for_statement -> . REP_THROUGH ABRE_PARENTESES VARIAVEL PONTO_VIRGULA expression PONTO_VIRGULA expression FECHA_PARENTESES INICIO statement_list FIM
    (44) declaration -> . type_specifier VARIAVEL PONTO_VIRGULA
    (2) type_specifier -> . TIPO_INT
    (3) type_specifier -> . TIPO_FLOAT
    (4) type_specifier -> . TIPO_CHAR

    FIM             shift and go to state 22
    VARIAVEL        shift and go to state 12
    ENTRADA         shift and go to state 13
    SAIDA           shift and go to state 14
    COND_IF         shift and go to state 15
    REP_DURING      shift and go to state 16
    REP_THROUGH     shift and go to state 17
    TIPO_INT        shift and go to state 19
    TIPO_FLOAT      shift and go to state 20
    TIPO_CHAR       shift and go to state 21

    statement                      shift and go to state 23
    assignment                     shift and go to state 5
    input                          shift and go to state 6
    output                         shift and go to state 7
    if_statement                   shift and go to state 8
    while_statement                shift and go to state 9
    for_statement                  shift and go to state 10
    declaration                    shift and go to state 11
    type_specifier                 shift and go to state 18

state 4

    (5) statement_list -> statement .

    FIM             reduce using rule 5 (statement_list -> statement .)
    VARIAVEL        reduce using rule 5 (statement_list -> statement .)
    ENTRADA         reduce using rule 5 (statement_list -> statement .)
    SAIDA           reduce using rule 5 (statement_list -> statement .)
    COND_IF         reduce using rule 5 (statement_list -> statement .)
    REP_DURING      reduce using rule 5 (statement_list -> statement .)
    REP_THROUGH     reduce using rule 5 (statement_list -> statement .)
    TIPO_INT        reduce using rule 5 (statement_list -> statement .)
    TIPO_FLOAT      reduce using rule 5 (statement_list -> statement .)
    TIPO_CHAR       reduce using rule 5 (statement_list -> statement .)


state 5

    (7) statement -> assignment .

    FIM             reduce using rule 7 (statement -> assignment .)
    VARIAVEL        reduce using rule 7 (statement -> assignment .)
    ENTRADA         reduce using rule 7 (statement -> assignment .)
    SAIDA           reduce using rule 7 (statement -> assignment .)
    COND_IF         reduce using rule 7 (statement -> assignment .)
    REP_DURING      reduce using rule 7 (statement -> assignment .)
    REP_THROUGH     reduce using rule 7 (statement -> assignment .)
    TIPO_INT        reduce using rule 7 (statement -> assignment .)
    TIPO_FLOAT      reduce using rule 7 (statement -> assignment .)
    TIPO_CHAR       reduce using rule 7 (statement -> assignment .)


state 6

    (8) statement -> input .

    FIM             reduce using rule 8 (statement -> input .)
    VARIAVEL        reduce using rule 8 (statement -> input .)
    ENTRADA         reduce using rule 8 (statement -> input .)
    SAIDA           reduce using rule 8 (statement -> input .)
    COND_IF         reduce using rule 8 (statement -> input .)
    REP_DURING      reduce using rule 8 (statement -> input .)
    REP_THROUGH     reduce using rule 8 (statement -> input .)
    TIPO_INT        reduce using rule 8 (statement -> input .)
    TIPO_FLOAT      reduce using rule 8 (statement -> input .)
    TIPO_CHAR       reduce using rule 8 (statement -> input .)


state 7

    (9) statement -> output .

    FIM             reduce using rule 9 (statement -> output .)
    VARIAVEL        reduce using rule 9 (statement -> output .)
    ENTRADA         reduce using rule 9 (statement -> output .)
    SAIDA           reduce using rule 9 (statement -> output .)
    COND_IF         reduce using rule 9 (statement -> output .)
    REP_DURING      reduce using rule 9 (statement -> output .)
    REP_THROUGH     reduce using rule 9 (statement -> output .)
    TIPO_INT        reduce using rule 9 (statement -> output .)
    TIPO_FLOAT      reduce using rule 9 (statement -> output .)
    TIPO_CHAR       reduce using rule 9 (statement -> output .)


state 8

    (10) statement -> if_statement .

    FIM             reduce using rule 10 (statement -> if_statement .)
    VARIAVEL        reduce using rule 10 (statement -> if_statement .)
    ENTRADA         reduce using rule 10 (statement -> if_statement .)
    SAIDA           reduce using rule 10 (statement -> if_statement .)
    COND_IF         reduce using rule 10 (statement -> if_statement .)
    REP_DURING      reduce using rule 10 (statement -> if_statement .)
    REP_THROUGH     reduce using rule 10 (statement -> if_statement .)
    TIPO_INT        reduce using rule 10 (statement -> if_statement .)
    TIPO_FLOAT      reduce using rule 10 (statement -> if_statement .)
    TIPO_CHAR       reduce using rule 10 (statement -> if_statement .)


state 9

    (11) statement -> while_statement .

    FIM             reduce using rule 11 (statement -> while_statement .)
    VARIAVEL        reduce using rule 11 (statement -> while_statement .)
    ENTRADA         reduce using rule 11 (statement -> while_statement .)
    SAIDA           reduce using rule 11 (statement -> while_statement .)
    COND_IF         reduce using rule 11 (statement -> while_statement .)
    REP_DURING      reduce using rule 11 (statement -> while_statement .)
    REP_THROUGH     reduce using rule 11 (statement -> while_statement .)
    TIPO_INT        reduce using rule 11 (statement -> while_statement .)
    TIPO_FLOAT      reduce using rule 11 (statement -> while_statement .)
    TIPO_CHAR       reduce using rule 11 (statement -> while_statement .)


state 10

    (12) statement -> for_statement .

    FIM             reduce using rule 12 (statement -> for_statement .)
    VARIAVEL        reduce using rule 12 (statement -> for_statement .)
    ENTRADA         reduce using rule 12 (statement -> for_statement .)
    SAIDA           reduce using rule 12 (statement -> for_statement .)
    COND_IF         reduce using rule 12 (statement -> for_statement .)
    REP_DURING      reduce using rule 12 (statement -> for_statement .)
    REP_THROUGH     reduce using rule 12 (statement -> for_statement .)
    TIPO_INT        reduce using rule 12 (statement -> for_statement .)
    TIPO_FLOAT      reduce using rule 12 (statement -> for_statement .)
    TIPO_CHAR       reduce using rule 12 (statement -> for_statement .)


state 11

    (13) statement -> declaration .

    FIM             reduce using rule 13 (statement -> declaration .)
    VARIAVEL        reduce using rule 13 (statement -> declaration .)
    ENTRADA         reduce using rule 13 (statement -> declaration .)
    SAIDA           reduce using rule 13 (statement -> declaration .)
    COND_IF         reduce using rule 13 (statement -> declaration .)
    REP_DURING      reduce using rule 13 (statement -> declaration .)
    REP_THROUGH     reduce using rule 13 (statement -> declaration .)
    TIPO_INT        reduce using rule 13 (statement -> declaration .)
    TIPO_FLOAT      reduce using rule 13 (statement -> declaration .)
    TIPO_CHAR       reduce using rule 13 (statement -> declaration .)


state 12

    (14) assignment -> VARIAVEL . ATRIBUICAO expression PONTO_VIRGULA

    ATRIBUICAO      shift and go to state 24


state 13

    (15) input -> ENTRADA . ABRE_PARENTESES VARIAVEL FECHA_PARENTESES PONTO_VIRGULA

    ABRE_PARENTESES shift and go to state 25


state 14

    (16) output -> SAIDA . ABRE_PARENTESES output_list FECHA_PARENTESES PONTO_VIRGULA

    ABRE_PARENTESES shift and go to state 26


state 15

    (40) if_statement -> COND_IF . ABRE_PARENTESES expression FECHA_PARENTESES INICIO statement_list FIM
    (41) if_statement -> COND_IF . ABRE_PARENTESES expression FECHA_PARENTESES INICIO statement_list FIM COND_ELSE INICIO statement_list FIM

    ABRE_PARENTESES shift and go to state 27


state 16

    (42) while_statement -> REP_DURING . ABRE_PARENTESES expression FECHA_PARENTESES INICIO statement_list FIM

    ABRE_PARENTESES shift and go to state 28


state 17

    (43) for_statement -> REP_THROUGH . ABRE_PARENTESES VARIAVEL PONTO_VIRGULA expression PONTO_VIRGULA expression FECHA_PARENTESES INICIO statement_list FIM

    ABRE_PARENTESES shift and go to state 29


state 18

    (44) declaration -> type_specifier . VARIAVEL PONTO_VIRGULA

    VARIAVEL        shift and go to state 30


state 19

    (2) type_specifier -> TIPO_INT .

    VARIAVEL        reduce using rule 2 (type_specifier -> TIPO_INT .)


state 20

    (3) type_specifier -> TIPO_FLOAT .

    VARIAVEL        reduce using rule 3 (type_specifier -> TIPO_FLOAT .)


state 21

    (4) type_specifier -> TIPO_CHAR .

    VARIAVEL        reduce using rule 4 (type_specifier -> TIPO_CHAR .)


state 22

    (1) program -> INICIO statement_list FIM .

    $end            reduce using rule 1 (program -> INICIO statement_list FIM .)


state 23

    (6) statement_list -> statement_list statement .

    FIM             reduce using rule 6 (statement_list -> statement_list statement .)
    VARIAVEL        reduce using rule 6 (statement_list -> statement_list statement .)
    ENTRADA         reduce using rule 6 (statement_list -> statement_list statement .)
    SAIDA           reduce using rule 6 (statement_list -> statement_list statement .)
    COND_IF         reduce using rule 6 (statement_list -> statement_list statement .)
    REP_DURING      reduce using rule 6 (statement_list -> statement_list statement .)
    REP_THROUGH     reduce using rule 6 (statement_list -> statement_list statement .)
    TIPO_INT        reduce using rule 6 (statement_list -> statement_list statement .)
    TIPO_FLOAT      reduce using rule 6 (statement_list -> statement_list statement .)
    TIPO_CHAR       reduce using rule 6 (statement_list -> statement_list statement .)


state 24

    (14) assignment -> VARIAVEL ATRIBUICAO . expression PONTO_VIRGULA
    (19) expression -> . term
    (20) expression -> . expression SOMA term
    (21) expression -> . expression SUBTRACAO term
    (22) expression -> . expression MENOR term
    (23) expression -> . expression MAIOR term
    (24) expression -> . expression IGUAL term
    (25) expression -> . expression DIFERENTE term
    (26) expression -> . expression MENOR_IGUAL term
    (27) expression -> . expression MAIOR_IGUAL term
    (28) expression -> . expression E term
    (29) expression -> . expression OU term
    (30) term -> . factor
    (31) term -> . term MULTIPLICACAO factor
    (32) term -> . term DIVISAO factor
    (33) factor -> . INT
    (34) factor -> . FLOAT
    (35) factor -> . CHAR
    (36) factor -> . VARIAVEL
    (37) factor -> . ABRE_PARENTESES expression FECHA_PARENTESES
    (38) factor -> . NEGACAO factor
    (39) factor -> . factor RESTO factor

    INT             shift and go to state 35
    FLOAT           shift and go to state 36
    CHAR            shift and go to state 37
    VARIAVEL        shift and go to state 31
    ABRE_PARENTESES shift and go to state 38
    NEGACAO         shift and go to state 39

    expression                     shift and go to state 32
    term                           shift and go to state 33
    factor                         shift and go to state 34

state 25

    (15) input -> ENTRADA ABRE_PARENTESES . VARIAVEL FECHA_PARENTESES PONTO_VIRGULA

    VARIAVEL        shift and go to state 40


state 26

    (16) output -> SAIDA ABRE_PARENTESES . output_list FECHA_PARENTESES PONTO_VIRGULA
    (17) output_list -> . expression
    (18) output_list -> . output_list VIRGULA expression
    (19) expression -> . term
    (20) expression -> . expression SOMA term
    (21) expression -> . expression SUBTRACAO term
    (22) expression -> . expression MENOR term
    (23) expression -> . expression MAIOR term
    (24) expression -> . expression IGUAL term
    (25) expression -> . expression DIFERENTE term
    (26) expression -> . expression MENOR_IGUAL term
    (27) expression -> . expression MAIOR_IGUAL term
    (28) expression -> . expression E term
    (29) expression -> . expression OU term
    (30) term -> . factor
    (31) term -> . term MULTIPLICACAO factor
    (32) term -> . term DIVISAO factor
    (33) factor -> . INT
    (34) factor -> . FLOAT
    (35) factor -> . CHAR
    (36) factor -> . VARIAVEL
    (37) factor -> . ABRE_PARENTESES expression FECHA_PARENTESES
    (38) factor -> . NEGACAO factor
    (39) factor -> . factor RESTO factor

    INT             shift and go to state 35
    FLOAT           shift and go to state 36
    CHAR            shift and go to state 37
    VARIAVEL        shift and go to state 31
    ABRE_PARENTESES shift and go to state 38
    NEGACAO         shift and go to state 39

    output_list                    shift and go to state 41
    expression                     shift and go to state 42
    term                           shift and go to state 33
    factor                         shift and go to state 34

state 27

    (40) if_statement -> COND_IF ABRE_PARENTESES . expression FECHA_PARENTESES INICIO statement_list FIM
    (41) if_statement -> COND_IF ABRE_PARENTESES . expression FECHA_PARENTESES INICIO statement_list FIM COND_ELSE INICIO statement_list FIM
    (19) expression -> . term
    (20) expression -> . expression SOMA term
    (21) expression -> . expression SUBTRACAO term
    (22) expression -> . expression MENOR term
    (23) expression -> . expression MAIOR term
    (24) expression -> . expression IGUAL term
    (25) expression -> . expression DIFERENTE term
    (26) expression -> . expression MENOR_IGUAL term
    (27) expression -> . expression MAIOR_IGUAL term
    (28) expression -> . expression E term
    (29) expression -> . expression OU term
    (30) term -> . factor
    (31) term -> . term MULTIPLICACAO factor
    (32) term -> . term DIVISAO factor
    (33) factor -> . INT
    (34) factor -> . FLOAT
    (35) factor -> . CHAR
    (36) factor -> . VARIAVEL
    (37) factor -> . ABRE_PARENTESES expression FECHA_PARENTESES
    (38) factor -> . NEGACAO factor
    (39) factor -> . factor RESTO factor

    INT             shift and go to state 35
    FLOAT           shift and go to state 36
    CHAR            shift and go to state 37
    VARIAVEL        shift and go to state 31
    ABRE_PARENTESES shift and go to state 38
    NEGACAO         shift and go to state 39

    expression                     shift and go to state 43
    term                           shift and go to state 33
    factor                         shift and go to state 34

state 28

    (42) while_statement -> REP_DURING ABRE_PARENTESES . expression FECHA_PARENTESES INICIO statement_list FIM
    (19) expression -> . term
    (20) expression -> . expression SOMA term
    (21) expression -> . expression SUBTRACAO term
    (22) expression -> . expression MENOR term
    (23) expression -> . expression MAIOR term
    (24) expression -> . expression IGUAL term
    (25) expression -> . expression DIFERENTE term
    (26) expression -> . expression MENOR_IGUAL term
    (27) expression -> . expression MAIOR_IGUAL term
    (28) expression -> . expression E term
    (29) expression -> . expression OU term
    (30) term -> . factor
    (31) term -> . term MULTIPLICACAO factor
    (32) term -> . term DIVISAO factor
    (33) factor -> . INT
    (34) factor -> . FLOAT
    (35) factor -> . CHAR
    (36) factor -> . VARIAVEL
    (37) factor -> . ABRE_PARENTESES expression FECHA_PARENTESES
    (38) factor -> . NEGACAO factor
    (39) factor -> . factor RESTO factor

    INT             shift and go to state 35
    FLOAT           shift and go to state 36
    CHAR            shift and go to state 37
    VARIAVEL        shift and go to state 31
    ABRE_PARENTESES shift and go to state 38
    NEGACAO         shift and go to state 39

    expression                     shift and go to state 44
    term                           shift and go to state 33
    factor                         shift and go to state 34

state 29

    (43) for_statement -> REP_THROUGH ABRE_PARENTESES . VARIAVEL PONTO_VIRGULA expression PONTO_VIRGULA expression FECHA_PARENTESES INICIO statement_list FIM

    VARIAVEL        shift and go to state 45


state 30

    (44) declaration -> type_specifier VARIAVEL . PONTO_VIRGULA

    PONTO_VIRGULA   shift and go to state 46


state 31

    (36) factor -> VARIAVEL .

    RESTO           reduce using rule 36 (factor -> VARIAVEL .)
    MULTIPLICACAO   reduce using rule 36 (factor -> VARIAVEL .)
    DIVISAO         reduce using rule 36 (factor -> VARIAVEL .)
    PONTO_VIRGULA   reduce using rule 36 (factor -> VARIAVEL .)
    SOMA            reduce using rule 36 (factor -> VARIAVEL .)
    SUBTRACAO       reduce using rule 36 (factor -> VARIAVEL .)
    MENOR           reduce using rule 36 (factor -> VARIAVEL .)
    MAIOR           reduce using rule 36 (factor -> VARIAVEL .)
    IGUAL           reduce using rule 36 (factor -> VARIAVEL .)
    DIFERENTE       reduce using rule 36 (factor -> VARIAVEL .)
    MENOR_IGUAL     reduce using rule 36 (factor -> VARIAVEL .)
    MAIOR_IGUAL     reduce using rule 36 (factor -> VARIAVEL .)
    E               reduce using rule 36 (factor -> VARIAVEL .)
    OU              reduce using rule 36 (factor -> VARIAVEL .)
    FECHA_PARENTESES reduce using rule 36 (factor -> VARIAVEL .)
    VIRGULA         reduce using rule 36 (factor -> VARIAVEL .)


state 32

    (14) assignment -> VARIAVEL ATRIBUICAO expression . PONTO_VIRGULA
    (20) expression -> expression . SOMA term
    (21) expression -> expression . SUBTRACAO term
    (22) expression -> expression . MENOR term
    (23) expression -> expression . MAIOR term
    (24) expression -> expression . IGUAL term
    (25) expression -> expression . DIFERENTE term
    (26) expression -> expression . MENOR_IGUAL term
    (27) expression -> expression . MAIOR_IGUAL term
    (28) expression -> expression . E term
    (29) expression -> expression . OU term

    PONTO_VIRGULA   shift and go to state 47
    SOMA            shift and go to state 48
    SUBTRACAO       shift and go to state 49
    MENOR           shift and go to state 50
    MAIOR           shift and go to state 51
    IGUAL           shift and go to state 52
    DIFERENTE       shift and go to state 53
    MENOR_IGUAL     shift and go to state 54
    MAIOR_IGUAL     shift and go to state 55
    E               shift and go to state 56
    OU              shift and go to state 57


state 33

    (19) expression -> term .
    (31) term -> term . MULTIPLICACAO factor
    (32) term -> term . DIVISAO factor

    PONTO_VIRGULA   reduce using rule 19 (expression -> term .)
    SOMA            reduce using rule 19 (expression -> term .)
    SUBTRACAO       reduce using rule 19 (expression -> term .)
    MENOR           reduce using rule 19 (expression -> term .)
    MAIOR           reduce using rule 19 (expression -> term .)
    IGUAL           reduce using rule 19 (expression -> term .)
    DIFERENTE       reduce using rule 19 (expression -> term .)
    MENOR_IGUAL     reduce using rule 19 (expression -> term .)
    MAIOR_IGUAL     reduce using rule 19 (expression -> term .)
    E               reduce using rule 19 (expression -> term .)
    OU              reduce using rule 19 (expression -> term .)
    FECHA_PARENTESES reduce using rule 19 (expression -> term .)
    VIRGULA         reduce using rule 19 (expression -> term .)
    MULTIPLICACAO   shift and go to state 58
    DIVISAO         shift and go to state 59


state 34

    (30) term -> factor .
    (39) factor -> factor . RESTO factor

    MULTIPLICACAO   reduce using rule 30 (term -> factor .)
    DIVISAO         reduce using rule 30 (term -> factor .)
    PONTO_VIRGULA   reduce using rule 30 (term -> factor .)
    SOMA            reduce using rule 30 (term -> factor .)
    SUBTRACAO       reduce using rule 30 (term -> factor .)
    MENOR           reduce using rule 30 (term -> factor .)
    MAIOR           reduce using rule 30 (term -> factor .)
    IGUAL           reduce using rule 30 (term -> factor .)
    DIFERENTE       reduce using rule 30 (term -> factor .)
    MENOR_IGUAL     reduce using rule 30 (term -> factor .)
    MAIOR_IGUAL     reduce using rule 30 (term -> factor .)
    E               reduce using rule 30 (term -> factor .)
    OU              reduce using rule 30 (term -> factor .)
    FECHA_PARENTESES reduce using rule 30 (term -> factor .)
    VIRGULA         reduce using rule 30 (term -> factor .)
    RESTO           shift and go to state 60


state 35

    (33) factor -> INT .

    RESTO           reduce using rule 33 (factor -> INT .)
    MULTIPLICACAO   reduce using rule 33 (factor -> INT .)
    DIVISAO         reduce using rule 33 (factor -> INT .)
    PONTO_VIRGULA   reduce using rule 33 (factor -> INT .)
    SOMA            reduce using rule 33 (factor -> INT .)
    SUBTRACAO       reduce using rule 33 (factor -> INT .)
    MENOR           reduce using rule 33 (factor -> INT .)
    MAIOR           reduce using rule 33 (factor -> INT .)
    IGUAL           reduce using rule 33 (factor -> INT .)
    DIFERENTE       reduce using rule 33 (factor -> INT .)
    MENOR_IGUAL     reduce using rule 33 (factor -> INT .)
    MAIOR_IGUAL     reduce using rule 33 (factor -> INT .)
    E               reduce using rule 33 (factor -> INT .)
    OU              reduce using rule 33 (factor -> INT .)
    FECHA_PARENTESES reduce using rule 33 (factor -> INT .)
    VIRGULA         reduce using rule 33 (factor -> INT .)


state 36

    (34) factor -> FLOAT .

    RESTO           reduce using rule 34 (factor -> FLOAT .)
    MULTIPLICACAO   reduce using rule 34 (factor -> FLOAT .)
    DIVISAO         reduce using rule 34 (factor -> FLOAT .)
    PONTO_VIRGULA   reduce using rule 34 (factor -> FLOAT .)
    SOMA            reduce using rule 34 (factor -> FLOAT .)
    SUBTRACAO       reduce using rule 34 (factor -> FLOAT .)
    MENOR           reduce using rule 34 (factor -> FLOAT .)
    MAIOR           reduce using rule 34 (factor -> FLOAT .)
    IGUAL           reduce using rule 34 (factor -> FLOAT .)
    DIFERENTE       reduce using rule 34 (factor -> FLOAT .)
    MENOR_IGUAL     reduce using rule 34 (factor -> FLOAT .)
    MAIOR_IGUAL     reduce using rule 34 (factor -> FLOAT .)
    E               reduce using rule 34 (factor -> FLOAT .)
    OU              reduce using rule 34 (factor -> FLOAT .)
    FECHA_PARENTESES reduce using rule 34 (factor -> FLOAT .)
    VIRGULA         reduce using rule 34 (factor -> FLOAT .)


state 37

    (35) factor -> CHAR .

    RESTO           reduce using rule 35 (factor -> CHAR .)
    MULTIPLICACAO   reduce using rule 35 (factor -> CHAR .)
    DIVISAO         reduce using rule 35 (factor -> CHAR .)
    PONTO_VIRGULA   reduce using rule 35 (factor -> CHAR .)
    SOMA            reduce using rule 35 (factor -> CHAR .)
    SUBTRACAO       reduce using rule 35 (factor -> CHAR .)
    MENOR           reduce using rule 35 (factor -> CHAR .)
    MAIOR           reduce using rule 35 (factor -> CHAR .)
    IGUAL           reduce using rule 35 (factor -> CHAR .)
    DIFERENTE       reduce using rule 35 (factor -> CHAR .)
    MENOR_IGUAL     reduce using rule 35 (factor -> CHAR .)
    MAIOR_IGUAL     reduce using rule 35 (factor -> CHAR .)
    E               reduce using rule 35 (factor -> CHAR .)
    OU              reduce using rule 35 (factor -> CHAR .)
    FECHA_PARENTESES reduce using rule 35 (factor -> CHAR .)
    VIRGULA         reduce using rule 35 (factor -> CHAR .)


state 38

    (37) factor -> ABRE_PARENTESES . expression FECHA_PARENTESES
    (19) expression -> . term
    (20) expression -> . expression SOMA term
    (21) expression -> . expression SUBTRACAO term
    (22) expression -> . expression MENOR term
    (23) expression -> . expression MAIOR term
    (24) expression -> . expression IGUAL term
    (25) expression -> . expression DIFERENTE term
    (26) expression -> . expression MENOR_IGUAL term
    (27) expression -> . expression MAIOR_IGUAL term
    (28) expression -> . expression E term
    (29) expression -> . expression OU term
    (30) term -> . factor
    (31) term -> . term MULTIPLICACAO factor
    (32) term -> . term DIVISAO factor
    (33) factor -> . INT
    (34) factor -> . FLOAT
    (35) factor -> . CHAR
    (36) factor -> . VARIAVEL
    (37) factor -> . ABRE_PARENTESES expression FECHA_PARENTESES
    (38) factor -> . NEGACAO factor
    (39) factor -> . factor RESTO factor

    INT             shift and go to state 35
    FLOAT           shift and go to state 36
    CHAR            shift and go to state 37
    VARIAVEL        shift and go to state 31
    ABRE_PARENTESES shift and go to state 38
    NEGACAO         shift and go to state 39

    expression                     shift and go to state 61
    term                           shift and go to state 33
    factor                         shift and go to state 34

state 39

    (38) factor -> NEGACAO . factor
    (33) factor -> . INT
    (34) factor -> . FLOAT
    (35) factor -> . CHAR
    (36) factor -> . VARIAVEL
    (37) factor -> . ABRE_PARENTESES expression FECHA_PARENTESES
    (38) factor -> . NEGACAO factor
    (39) factor -> . factor RESTO factor

    INT             shift and go to state 35
    FLOAT           shift and go to state 36
    CHAR            shift and go to state 37
    VARIAVEL        shift and go to state 31
    ABRE_PARENTESES shift and go to state 38
    NEGACAO         shift and go to state 39

    factor                         shift and go to state 62

state 40

    (15) input -> ENTRADA ABRE_PARENTESES VARIAVEL . FECHA_PARENTESES PONTO_VIRGULA

    FECHA_PARENTESES shift and go to state 63


state 41

    (16) output -> SAIDA ABRE_PARENTESES output_list . FECHA_PARENTESES PONTO_VIRGULA
    (18) output_list -> output_list . VIRGULA expression

    FECHA_PARENTESES shift and go to state 64
    VIRGULA         shift and go to state 65


state 42

    (17) output_list -> expression .
    (20) expression -> expression . SOMA term
    (21) expression -> expression . SUBTRACAO term
    (22) expression -> expression . MENOR term
    (23) expression -> expression . MAIOR term
    (24) expression -> expression . IGUAL term
    (25) expression -> expression . DIFERENTE term
    (26) expression -> expression . MENOR_IGUAL term
    (27) expression -> expression . MAIOR_IGUAL term
    (28) expression -> expression . E term
    (29) expression -> expression . OU term
